--- a/www/templates/playlists.html
+++ b/www/templates/playlists.html
@@ -1,8 +1,8 @@
-<ion-view view-title="Playlists">
+<ion-view view-title="Playlists" ng-init="vm.init()">
   <ion-content>
     <ion-list>
-      <ion-item ng-repeat="playlist in playlists" href="#/app/playlists/{{playlist.id}}">
-        {{playlist.title}}
+      <ion-item ng-repeat="itm in vm.products" href="#/app/playlists/{{playlist.id}}">
+        {{itm.name}}
       </ion-item>
     </ion-list>
   </ion-content>
