ProductDetails page in progress

--- a/www/templates/playlist.html
+++ b/www/templates/playlist.html
@@ -1,5 +1,5 @@
-<ion-view view-title="Playlist">
+<ion-view view-title="Playlist" ng-init="vm.init()">
   <ion-content>
-    <h1>Playlist</h1>
+    <h1>Product Details</h1>
   </ion-content>
 </ion-view>
