--- a/www/templates/playlists.html
+++ b/www/templates/playlists.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Playlists" ng-init="vm.init()">
   <ion-content>
     <ion-list>
-      <ion-item ng-repeat="itm in vm.products" href="#/app/playlists/{{playlist.id}}">
+      <ion-item ng-repeat="itm in vm.products" href="#/app/playlists/{{itm.id}}">
         {{itm.name}}
       </ion-item>
     </ion-list>
