Productdetails in progress

--- a/www/templates/productDetail.html
+++ b/www/templates/productDetail.html
@@ -1,5 +1,7 @@
 <ion-view view-title="Playlist" ng-init="vm.init()">
   <ion-content>
-    <h1>Product Details</h1>
+    <h1>
+    	{{vm.productDetail.name}}
+ 	</h1>
   </ion-content>
 </ion-view>
