Removed commented codes

--- a/www/templates/productDetail.html
+++ b/www/templates/productDetail.html
@@ -1,15 +1,5 @@
 <ion-view view-title="Playlist" ng-init="vm.init()">
     <ion-content>
-       <!--  <h1>
-      {{vm.productDetail.name}}
-  </h1> -->
-        <!-- <ion-slide-box on-slide-changed="slideChanged(index)">
-            <ion-slide ng-repeat="itm in vm.productDetail.imageUrl">
-                <div id="logo">
-                    <img src="{{vm.imgUrl + itm}}">
-                </div>
-            </ion-slide>
-        </ion-slide-box> -->
 <div class="list card">
 
   <div class="item">
@@ -17,7 +7,9 @@
   </div>
 
   <div class="item item-body" ng-repeat="itm in vm.productDetail.imageUrl">
+  <ion-slide-box on-slide-changed="slideChanged(index)">
     <img class="full-image" src="{{vm.imgUrl + itm}}">
+    </ion-slide-box>
      <p>
       This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
       the content is from a card-body consisting of an image and paragraph text. The footer
