Add appState service to hold the Id of last shown product

--- a/www/templates/productDetail.html
+++ b/www/templates/productDetail.html
@@ -20,7 +20,7 @@
                 </p>
             <br>
             <div class="bar bar-footer">
-                <a class="tab-item">
+                <a class="tab-item" ng-click="vm.previous()">
                     <i class="icon ion-chevron-left"></i> Previous
                 </a>
                 <a class="tab-item">
