--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,7 +1,9 @@
 /*ion-slide-box begins*/
+
 body {
-  cursor: url('http://ionicframework.com/img/finger.png'), auto;
+    cursor: url('http://ionicframework.com/img/finger.png'), auto;
 }
+
 .slider {
   height: 100%;
 }
@@ -19,21 +21,35 @@ body {
   margin: 30px 0px;
 }
 
-#list {
-  width: 170px;
-  margin: 30px auto;
-  font-size: 20px;
-}
-#list ol {
-  margin-top: 30px;
-}
-#list ol li {
-  text-align: left;
-  list-style: decimal;
-  margin: 10px 0px;
+[nav-bar-transition="ios"] [nav-bar="active"] .bar,
+[nav-bar-transition="ios"] [nav-bar="entering"] .bar {
+    background: rgba(40, 195, 152, 0.82);
 }
 
-.button.ng-hide{
-  display:none;
+#logo {
+    margin: 30px 0px;
 }
+
+#list {
+    width: 170px;
+    margin: 30px auto;
+    font-size: 20px;
+}
+
+#list ol {
+    margin-top: 30px;
+}
+
+#list ol li {
+    text-align: left;
+    list-style: decimal;
+    margin: 10px 0px;
+}
+
+.button.ng-hide {
+    display: none;
+}
+
+
 /*end of ion-slide-box*/
+a
