--- a/www/templates/productDetail.html
+++ b/www/templates/productDetail.html
@@ -4,35 +4,60 @@
             <div class="item">
                 <h1>{{vm.productDetail.name}}</h1>
             </div>
-
-<ion-slide-box on-slide-changed="slideChanged(index)">
-            
+            <!-- <ion-slide-box on-slide-changed="slideChanged(index)">
                 <ion-slide ng-repeat="itm in vm.productDetail.imageUrl">
                     <div id="logo">
-                        <img src="{{vm.imgUrl + itm}}">
+                        <img style ="height:50px;width:50px" src="{{vm.imgUrl + itm}}">
                     </div>
                 </ion-slide>
-                </ion-slide-box>
-              
-              
-              <p>
-                    This is a "Facebook" styled Card. The header is created from a Thumbnail List item, the content is from a card-body consisting of an image and paragraph text. The footer consists of tabs, icons aligned left, within the card-footer.
-                </p>
+            </ion-slide-box> -->
+            <ion-slide-box on-slide-changed="slideChanged(index)">
+                <ion-slide ng-repeat="itm in vm.productDetail.imageUrl">
+                    <!--   <div id="logo">
+                        <img a src="http://code.ionicframework.com/assets/img/app_icon.png">
+                    </div> -->
+                    <div id="logo">
+                        <img style="/*height:6em;*/width:80%" src="{{vm.imgUrl + itm}}">
+                    </div>
+                </ion-slide>
+                <!--  <ion-slide>
+                    <h3>Using Awesome</h3>
+                    <div id="list">
+                        <h5>Just three steps:</h5>
+                        <ol>
+                            <li>Be awesome</li>
+                            <li>Stay awesome</li>
+                            <li>There is no step 3</li>
+                        </ol>
+                    </div>
+                </ion-slide>
+                <ion-slide>
+                    <h3>Any questions?</h3>
+                    <p>
+                        Too bad!
+                    </p>
+                </ion-slide> -->
+            </ion-slide-box>
+            <p>
+                This is a "Facebook" styled Card. The header is created from a Thumbnail List item, the content is from a card-body consisting of an image and paragraph text. The footer consists of tabs, icons aligned left, within the card-footer.
+            </p>
             <br>
-            <div class="bar bar-footer">
-                <a class="tab-item" ng-click="vm.previous()">
-                    <i class="icon ion-chevron-left"></i> Previous
-                </a>
-                <a class="tab-item">
-                    <i class="icon ion-thumbsup"></i> Like
-                </a>
-                <a class="tab-item">
-                    <i class="icon ion-bag"></i> Buy
-                </a>
-                <a class="tab-item">
-                    <i class="icon ion-chevron-right"></i> Next
-                </a>
-            </div>
         </div>
     </ion-content>
+    <div class="bar bar-footer">
+        <a class="tab-item" ng-click="vm.previous()">
+            <i class="icon ion-chevron-left"></i> Previous
+        </a>
+        <a class="tab-item">
+            <i class="icon ion-thumbsup"></i> Like
+        </a>
+        <a class="tab-item">
+            <i class="icon ion-bag"></i> Buy
+        </a>
+        <a class="tab-item">
+            <i class="icon ion-chevron-right"></i> Next
+        </a>
+    </div>
 </ion-view>
+a a a
+a
