--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -14,12 +14,12 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+      <h1 class="title">Business Name</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
        <ion-item menu-close href="#/app/playlists">
-          Products
+          Promotions
         </ion-item>
         <ion-item menu-close ng-click="login()">
           Login
@@ -27,8 +27,8 @@
         <ion-item menu-close href="#/app/search">
           Search
         </ion-item>
-        <ion-item menu-close href="#/app/browse">
-          Browse
+        <ion-item menu-close href="#/app/aboutUs">
+          About Us
         </ion-item>
       </ion-list>
     </ion-content>
