--- a/www/templates/productLists.html
+++ b/www/templates/productLists.html
@@ -2,7 +2,7 @@
   <ion-content>
   <div class="list">
 
-    <a class="item item-avatar" ng-repeat="itm in vm.products" href="#/app/productDetails/{{itm.id}}">
+    <a class="item item-avatar" ng-repeat="itm in vm.products track by $index" href="#/app/productDetails/{{itm.id}}">
     <img cache-src="{{vm.imageUrl + itm.imageUrl[0]}}"/>
      
       <h2>{{itm.name}}</h2>
