Product-details forward navigation done

--- a/www/templates/productDetail.html
+++ b/www/templates/productDetail.html
@@ -29,7 +29,7 @@
             <i class="icon ion-bag"></i> Buy
         </a>
         <a class="tab-item">
-            <i class="icon ion-chevron-right"></i> Next
+            <i class="icon ion-chevron-right" ng-click="vm.next()"></i> Next
         </a>
     </div>
 </ion-view>
