checkout page in progress

--- a/www/templates/productDetail.html
+++ b/www/templates/productDetail.html
@@ -26,7 +26,7 @@
             <i class="icon ion-thumbsup"></i> Like
         </a>
         <a class="tab-item">
-            <i class="icon ion-bag"></i> Buy
+            <i class="icon ion-bag" ng-click="vm.checkout()"></i> Buy
         </a>
         <a class="tab-item">
             <i class="icon ion-chevron-right" ng-click="vm.next()"></i> Next
