--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -18,8 +18,12 @@
         </label>
         <label class="item">
           <button class="button button-block button-positive" type="submit">Log in</button>
-        </label>
+       
       </div>
     </form>
+
+     </label>  <label class="item">
+          <button class="button button-block button-balanced" ng-click="vm.registration()" >New User Register Here!</button>
+        </label>
   </ion-content>
 </ion-modal-view>
