WIP: checkout pages

--- a/www/templates/checkout.html
+++ b/www/templates/checkout.html
@@ -12,7 +12,7 @@
 
        <div class="row row-center">
       <div class="col col-center">
-         <button class="button button-stable" ng-click="vm.incrementQty()">+</button>
+         <button class="button button-stable" ng-click="vm.incrementQty(itm.id)">+</button>
        <span class="label" style="vertical-align: middle;">
        	{{itm.qty}}
        </span>
