WIP: checkout section

--- a/www/templates/checkout.html
+++ b/www/templates/checkout.html
@@ -16,7 +16,7 @@
        <span class="label" style="vertical-align: middle;">
        	{{itm.qty}}
        </span>
-       <button class="button button-stable">-</button>
+       <button class="button button-stable" ng-click="vm.decrementQty(itm.id)">-</button>
       </div>
     </div>
        </a>
