WIP: Icons updated

--- a/www/templates/checkout.html
+++ b/www/templates/checkout.html
@@ -22,7 +22,7 @@
                         <button class="button button-icon icon ion-minus" ng-click="vm.decrementQty(itm.id)"></button>
                     </div>
                     <div class="col">
-                    	<button class="button button-icon icon ion-eye" ng-click="vm.showProduct(itm.id)"></button>
+                    	<button class="button button-icon icon ion-information-circled" ng-click="vm.showProduct(itm.id)"></button>
                     </div>
                     <div class="col">
                     	<button class="button button-icon icon ion-trash-a" ng-click="vm.removeProduct(itm.id)"></button>
