--- a/www/templates/productDetail.html
+++ b/www/templates/productDetail.html
@@ -23,10 +23,10 @@
             <i class="icon ion-chevron-left"></i> Previous
         </a>
         <a class="tab-item">
-            <i class="icon ion-thumbsup"></i> Like
+            <i class="icon ion-android-favorite-outline"></i> Like
         </a>
         <a class="tab-item">
-            <i class="icon ion-bag" ng-click="vm.checkout()"></i> Buy
+            <i class="icon ion-ios-cart-outline" ng-click="vm.checkout()"></i> Buy
         </a>
         <a class="tab-item">
             <i class="icon ion-chevron-right" ng-click="vm.next()"></i> Next
