add about us page

--- a/www/templates/aboutUs.html
+++ b/www/templates/aboutUs.html
@@ -1,1 +1,38 @@
-<h1>About Us</h1>
+<ion-view view-title="About US">
+  <ion-content>
+   <img class="full-image" src="https://image.freepik.com/free-vector/logo-business-name_355-559.jpg"/>
+   <div class="card">
+  <div class="item item-text-wrap">
+  for map
+  </div>
+  </div>
+  <div class="card">
+  <div class="item item-text-wrap">
+  <div class="list">
+
+  <div class="item item-button-right">
+    00971123456789
+    <button class="button button-positive">
+      <i class="icon ion-ios-telephone"></i>
+    </button>
+  </div>
+  <div class="item item-button-right">
+    info@bus.com
+    <button class="button button-positive">
+      <i class="icon ion-ios-email"></i>
+    </button>
+  </div>
+
+</div>
+  </div>
+  </div>
+    <div class="card">
+  <div class="item item-text-wrap" style="text-align: justify;">
+    "Business Name" started operations in the year (----) and have set benchmarks and established outposts of excellence for over a decade now. Variety, quality, durability, outreach, credibility, all these have contributed towards making "Business Name" a recognized and respected brand in the field of ready to assemble furniture.<br>
+UAE is becoming design savvy. Globally too the demand for technology-driven innovations in the field of design and décor is on the rise. We can clearly see the requirements, the challenges and the solutions to the world’s design dilemmas which is why we have upgraded our plant with the latest technology.
+At "Business Name" our strength lies in the technology, the same technology used worldwide to produce the smartest furniture. With the state of the art machinery from USA, Germany, Italy and Turkey, we are fully geared to give only the best to our customers. With our latest addition of CNC machines we are equipped to supply the quality at par with the best.<br>
+Our products are designed with an eye on the UAE usage conditions. We keep in mind to give added strength to our products essential for Indian market. With a touch of international design concept and a variety of wooden color finishes we provide the perfect range for our clients. With no compromise on quality at any point from design to selection of raw materials to perfect manufacturing we pack the finest furniture for our customers with a stamp of our goodwill and their trust.
+  </div>
+</div>
+  </ion-content>
+</ion-view>
