--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,13 +8,17 @@ body {
   height: 100%;
 }
 .slider-slide {
-  padding-top: 80px;
+  /*padding-top: 80px;*/
   color: #000;
   background-color: #fff;
   text-align: center;
 
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
   font-weight: 300;
+}
+
+.bar-stable .button.button-clear{
+  font-size: 10px;
 }
 
 #logo {
