Login navigation fixed

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -21,7 +21,7 @@
        <ion-item menu-close href="#/app/playlists">
           Promotions
         </ion-item>
-        <ion-item menu-close ng-click="login()">
+        <ion-item menu-close href="#/app/login">
           Login
         </ion-item>
         <ion-item menu-close href="#/app/search">
