--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,4 +1,4 @@
-<ion-modal-view>
+<ion-view view-title="Login" ng-init="vm.init()">
   <ion-header-bar>
     <h1 class="title">Login</h1>
     <div class="buttons">
@@ -26,4 +26,4 @@
           <button class="button button-block button-balanced" ng-click="vm.registration()" >New User Register Here!</button>
         </label>
   </ion-content>
-</ion-modal-view>
+</ion-view>
