User registration - fixed

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -22,7 +22,7 @@
       </div>
     </form>
 
-     </label>  <label class="item">
+    <label class="item">
           <button class="button button-block button-balanced" ng-click="vm.registration()" >New User Register Here!</button>
         </label>
   </ion-content>
