--- a/www/templates/userRegister.html
+++ b/www/templates/userRegister.html
@@ -1,4 +1,4 @@
-<ion-modal-view>
+<ion-view view-title="User Registration" ng-init="vm.init()">
   <ion-header-bar>
     <h1 class="title">Registration</h1>
       </ion-header-bar>
@@ -20,4 +20,4 @@
 
      </label> 
   </ion-content>
-</ion-modal-view>
+</ion-view>
