changed icons and added colors

--- a/www/templates/productDetail.html
+++ b/www/templates/productDetail.html
@@ -18,18 +18,18 @@
             <br>
         </div>
     </ion-content>
-    <div class="bar bar-footer">
+    <div class="bar bar-footer bar-positive">
         <a class="tab-item" ng-click="vm.previous()">
-            <i class="icon ion-chevron-left"></i> Previous
+            <i class="icon ion-ios-arrow-left"></i> Previous
         </a>
         <a class="tab-item">
-            <i class="icon ion-android-favorite-outline"></i> Like
+            <i class="icon ion-ios-heart-outline"></i> Like
         </a>
         <a class="tab-item">
             <i class="icon ion-ios-cart-outline" ng-click="vm.checkout()"></i> Buy
         </a>
         <a class="tab-item">
-            <i class="icon ion-chevron-right" ng-click="vm.next()"></i> Next
+            <i class="icon ion-ios-arrow-right" ng-click="vm.next()"></i> Next
         </a>
     </div>
 </ion-view>
