--- a/www/templates/checkout.html
+++ b/www/templates/checkout.html
@@ -13,19 +13,19 @@
                 </div>
                 <div class="row row-center">
                     <div class="col">
-                        <button class="button button-icon icon ion-plus-round" ng-click="vm.incrementQty(itm.id)"></button>
+                        <button class="button button-icon icon ion-ios-plus-outline" ng-click="vm.incrementQty(itm.id)"></button>
                     </div>
                     <div class="col">
                         <span class="label" >{{itm.qty}}</span>
        				</div>
        				<div class="col">
-                        <button class="button button-icon icon ion-minus" ng-click="vm.decrementQty(itm.id)"></button>
+                        <button class="button button-icon icon ion-ios-minus-outline" ng-click="vm.decrementQty(itm.id)"></button>
                     </div>
                     <div class="col">
-                    	<button class="button button-icon icon ion-information-circled" ng-click="vm.showProduct(itm.id)"></button>
+                    	<button class="button button-icon icon ion-ios-information" ng-click="vm.showProduct(itm.id)"></button>
                     </div>
                     <div class="col">
-                    	<button class="button button-icon icon ion-trash-a" ng-click="vm.removeProduct(itm.id)"></button>
+                    	<button class="button button-icon icon ion-ios-trash-outline" ng-click="vm.removeProduct(itm.id)"></button>
                     </div>
                 </div>
             </a>
@@ -37,9 +37,10 @@
             <h5>Total Billed Amount: AED 2,000 (for 3 items)</h5>
         </div>
     </div>
-    <div class="bar bar-footer row">
+     <div class="bar bar-footer row">
+    
         <div class="col col-center">
-            <button class="button button-stable" ng-click="vm.checkout()">Proceed with Checkout</button>
+            <button class="button button-full button-stable" ng-click="vm.checkout()">Proceed with Checkout</button>
         </div>
     </div>
 </ion-view>
