--- a/www/templates/productDetail.html
+++ b/www/templates/productDetail.html
@@ -22,9 +22,9 @@
         <a class="tab-item" ng-click="vm.previous()">
             <i class="icon ion-ios-arrow-left"></i> Previous
         </a>
-        <a class="tab-item">
+        <a class="tab-item" ng-click="vm.addToLike()">
             <i class="icon ion-ios-heart-outline"></i> Like
-        </a>
+		 </a>
         <a class="tab-item">
             <i class="icon ion-ios-cart-outline" ng-click="vm.checkout()"></i> Buy
         </a>
