--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -16,12 +16,15 @@
     <ion-header-bar class="bar-calm">
       <h1 class="title">Business Name</h1>
     </ion-header-bar>
-    <ion-content>
+    <ion-content ng-controller="appCtrl as vm" ng-init="vm.init()">
       <ion-list>
-       <ion-item menu-close href="#/app/playlists">
+       <ion-item menu-close href="#/app/products/0">
           Promotions
         </ion-item>
-        <ion-item menu-close ng-click="login()">
+        <ion-item menu-close ng-repeat="itm in vm.categories" href='#/app/products/{{itm.id}}'>
+          {{itm.name}}
+        </ion-item>
+        <ion-item menu-close href="#/app/login">
           Login
         </ion-item>
         <ion-item menu-close href="#/app/search">
