Product details to be more better

--- a/www/templates/productLists.html
+++ b/www/templates/productLists.html
@@ -1,12 +1,11 @@
 <ion-view view-title="Products" ng-init="vm.init()">
   <ion-content>
-  <div class="list">
+  <div class="list" ng-show="!vm.isProductListEmpty">
 
     <a class="item item-avatar" ng-repeat="itm in vm.products track by $index" href="#/app/productDetails/{{itm.id}}">
     <img cache-src="{{vm.imageUrl + itm.imageUrl[0]}}"/>
-     
       <h2>{{itm.name}}</h2>
-      <p>Pure wood(Description)</p>
+      <p>{{itm.description}}</p>
     </a>
 </div>
   </ion-content>
