--- a/www/templates/productDetail.html
+++ b/www/templates/productDetail.html
@@ -12,9 +12,7 @@
                     </div>
                 </ion-slide>
             </ion-slide-box>
-            <p>
-                This is a "Facebook" styled Card. The header is created from a Thumbnail List item, the content is from a card-body consisting of an image and paragraph text. The footer consists of tabs, icons aligned left, within the card-footer.
-            </p>
+           <div ng-bind-html="vm.productDetail.description"></div>
             <br>
         </div>
     </ion-content>
