Added new style

--- a/www/templates/aboutUs.html
+++ b/www/templates/aboutUs.html
@@ -3,6 +3,21 @@
   <ion-content>
    <img class="full-image" src="https://image.freepik.com/free-vector/logo-business-name_355-559.jpg"/>
    
+<div class="card">
+   <div class="row">
+   
+  <div class="col col-75">
+  Burj Atlas Computer Software House
+Megamall Tower, 4th Floor
+PO BOX 73500
+Sharjah UAE</div>
+  <div class="col"><button class="button button-positive">
+      <i class="icon ion-map"></i>
+    </button></div>
+    </div>
+</div>
+
+
   <div class="card">
   <div class="item item-text-wrap">
   <div class="list">
@@ -19,12 +34,12 @@
       <i class="icon ion-ios-email"></i>
     </button>
   </div>
-  <div class="item item-button-right">
-  View on Map  <!--https://www.google.co.in/maps/@24.8985987,55.361881,10z-->
+ <!--  <div class="item item-button-right">
+  View on Map 
   <button class="button button-positive">
       <i class="icon ion-map"></i>
     </button>
-  </div>
+  </div> -->
 
 </div>
   </div>
