--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -3,7 +3,8 @@
     <div class="bar bar-header item-input-inset">
   <label class="item-input-wrapper">
     <i class="icon ion-ios-search placeholder-icon"></i>
-    <input type="search" placeholder="Search" ng-change="vm.search()" ng-model="vm.searchText">
+    <input type="search" placeholder="Search" ng-change="vm.search()" ng-model="vm.searchText"
+    ng-model-options='{ debounce: 1000 }'>
   </label>
 </div>
   </ion-content>
