Added map image

--- a/www/templates/aboutUs.html
+++ b/www/templates/aboutUs.html
@@ -11,9 +11,9 @@
 Megamall Tower, 4th Floor
 PO BOX 73500
 Sharjah UAE</div>
-  <div class="col"><button class="button button-positive">
-      <i class="icon ion-map"></i>
-    </button></div>
+  <div class="col">
+  <a href="https://map.google.com"><img src="/img/map.png"></a>
+  </div>
     </div>
 </div>
 
