--- a/www/templates/demo.html
+++ b/www/templates/demo.html
@@ -1,6 +1,22 @@
-demo page for deisgner
-<h1>test</h1>
-demo page for deisgner
-<h1>test</h1>
-demo page for deisgner
-<h1>test</h1>
+<ion-view view-title="Demo">
+  <ion-content>
+  <div class="list card">
+  	<div class="item ">
+    <!-- <img src="avatar.jpg"> -->
+    <h2>Choose Your Business-Demo</h2>
+  </div>
+  	<div class="item item-text-wrap">
+
+<button class="button button-full button-positive">
+  Furniture
+</button>
+<button class="button button-full button-positive">
+  Super market
+</button>
+<button class="button button-full button-positive">
+  Jewellery
+</button>
+</div>
+</div>
+</ion-content>
+</ion-view>
