--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -33,6 +33,9 @@
         <ion-item menu-close href="#/app/aboutUs">
           About Us
         </ion-item>
+        <ion-item menu-close href="#/demo">
+          Demo
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
