Choose Demo in progress

--- a/www/templates/demo.html
+++ b/www/templates/demo.html
@@ -7,13 +7,13 @@
   </div>
   	<div class="item item-text-wrap">
 
-<button class="button button-full button-positive">
+<button class="button button-full button-positive" ng-click="vm.showFurniture()">
   Furniture
 </button>
-<button class="button button-full button-positive">
+<button class="button button-full button-positive" ng-click="vm.showSuperMarket()">
   Super market
 </button>
-<button class="button button-full button-positive">
+<button class="button button-full button-positive" ng-click="vm.showJewellery()">
   Jewellery
 </button>
 </div>
