Demo page in progress

--- a/www/templates/demo.html
+++ b/www/templates/demo.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Demo">
+<ion-view view-title="Choose from Demo">
   <ion-content>
   <div class="list card">
   	<div class="item ">
