Removed additional title field

--- a/www/templates/shippingInfo.html
+++ b/www/templates/shippingInfo.html
@@ -69,7 +69,7 @@
   </label>
 <!--ANOTHER TYPE-->
 
-<div class="row">
+<!-- <div class="row">
   <div class="col">
   <label class="item item-input item-select">
     <div class="input-label">
@@ -86,7 +86,7 @@
     <input type="text" placeholder="First Name">
   </label>
   </div>
-</div>
+</div> -->
 
 <!--END-->
   <label class="item item-input">
